<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.EmployeeUpdateFragment">

    <EditText
        android:id="@+id/ET_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/white"
        android:hint="@string/login_text"
        android:inputType="textVisiblePassword|textNoSuggestions"
        android:padding="15dp"/>

    <EditText
        android:id="@+id/ET_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ET_login"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:hint="@string/password"
        android:inputType="textVisiblePassword|textNoSuggestions"
        android:padding="15dp" />

    <EditText
        android:id="@+id/ET_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ET_password"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:hint="@string/name"
        android:inputType="textVisiblePassword|textNoSuggestions"
        android:padding="15dp" />
    
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/RV_operation_groups"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ET_name"
        android:layout_above="@id/BTN_save"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/BTN_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/save"/>

</RelativeLayout>